@@ -112,7 +112,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(digFlood digFlood.cpp)
     add_subdirectory(diggingInvaders)
     DFHACK_PLUGIN(drybuckets drybuckets.cpp)
-    DFHACK_PLUGIN(dwarfmonitor dwarfmonitor.cpp)
+    DFHACK_PLUGIN(dwarfmonitor dwarfmonitor.cpp LINK_LIBRARIES jsonxx)
     DFHACK_PLUGIN(embark-tools embark-tools.cpp)
     DFHACK_PLUGIN(eventful eventful.cpp LINK_LIBRARIES lua)
     DFHACK_PLUGIN(fastdwarf fastdwarf.cpp)
